# voice-diary-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.transcription.cpu.yml  docker-compose.transcription.yml  docker-compose.yml  pyproject.toml  test_ffmpeg_fix.py
.claude/: settings.local.json
.devcontainer/: .env.sample  Dockerfile.dev  devcontainer.json  devcontainer.sample.json  setup.sh
.github/workflows/: ci.yml
.kiro/specs/: design.md  discord-voice-diary-bot.md  status.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: __init__.py  __main__.py  bot.py  ffmpeg_runner.py  settings.py  storage.py  transcription.py
tests/: __init__.py  conftest.py  test_ffmpeg_runner.py  test_integration.py  test_settings.py  test_storage.py  test_transcription.py
